--- a/applications/openshift/api-server/api_server_auth_mode_rbac/rule.yml
+++ b/applications/openshift/api-server/api_server_auth_mode_rbac/rule.yml
@@ -13,7 +13,7 @@ title: Ensure authorization-mode RBAC is configured
 description: |-
   To ensure OpenShift restricts different identities to a defined set
   of operations they are allowed to perform, check that the API server's
-  <tt>authorization-mode</tt> configuration option list containst RBAC.
+  <tt>authorization-mode</tt> configuration option list contains RBAC.
 
 rationale: |-
   Role Based Access Control (RBAC) allows fine-grained control over the
