--- a/applications/openshift/api-server/api_server_insecure_bind_address/rule.yml
+++ b/applications/openshift/api-server/api_server_insecure_bind_address/rule.yml
@@ -27,7 +27,7 @@ description: |-
 
 rationale: |-
     If the API Server is bound to an insecure address the installation would
-    be susceptible to unauthented and unencrypted access to the master node(s).
+    be susceptible to unauthenticated and unencrypted access to the master node(s).
     The API Server does not perform authentication checking for insecure
     binds and the traffic is generally not encrypted.
 
