--- a/applications/openshift/api-server/api_server_kubelet_client_cert/rule.yml
+++ b/applications/openshift/api-server/api_server_kubelet_client_cert/rule.yml
@@ -26,7 +26,7 @@ description: |-
     </pre>
 
 rationale: |-
-    By default the API Server does not authenticate itself to the kublet's
+    By default the API Server does not authenticate itself to the kubelet's
     HTTPS endpoints. Requests from the API Server are treated anonymously.
     Configuring certificate-based kubelet authentication ensures that the
     API Server authenticates itself to kubelets when submitting requests.
