--- a/applications/openshift/api-server/api_server_request_timeout/rule.yml
+++ b/applications/openshift/api-server/api_server_request_timeout/rule.yml
@@ -27,7 +27,7 @@ description: |-
     </pre>
 
 rationale: |-
-    Setting global request timout allows extending the API Server request
+    Setting global request timeout allows extending the API Server request
     timeout limit to a duration appropriate to the user's connection speed.  By
     default, it is set to 1800 seconds which might not be suitable for some
     environments. Setting the limit too low may result in excessive timeouts,
