--- a/applications/openshift/authentication/idp_is_configured/rule.yml
+++ b/applications/openshift/authentication/idp_is_configured/rule.yml
@@ -84,7 +84,7 @@ warnings:
     {{{ openshift_filtered_cluster_setting({custom_api_path: dump_path}) | indent(4) }}}
 
 # NOTE(jaosorior): Here we're testing that ANYTHING has been set in
-# the identityProvidres section. We only care that it has been
+# the identityProviders section. We only care that it has been
 # configured to something.
 template:
   name: yamlfile_value
