--- a/applications/openshift/controller/controller_rotate_kubelet_server_certs/rule.yml
+++ b/applications/openshift/controller/controller_rotate_kubelet_server_certs/rule.yml
@@ -15,7 +15,7 @@ title: 'Ensure that the RotateKubeletServerCertificate argument is set'
 
 
 description: |-
-    To enforce kublet server certificate rotation on the Controller Manager,
+    To enforce kubelet server certificate rotation on the Controller Manager,
     set the <tt>RotateKubeletServerCertificate</tt> option to <tt>true</tt>
     in the <tt>openshift-kube-controller-manager</tt> configmap on the master
     node(s):
