--- a/applications/openshift/controller/controller_use_service_account/rule.yml
+++ b/applications/openshift/controller/controller_use_service_account/rule.yml
@@ -32,7 +32,7 @@ rationale: |-
     then builds a dedicated API client with that service account credential
     for each controller loop to use. Setting the
     <tt>use-service-account-credentials</tt> to <tt>true</tt> runs each
-    control loop within the contoller manager using a separate service
+    control loop within the controller manager using a separate service
     account credential. When used in combination with RBAC, this ensures
     that the control loops run with the minimum permissions required to
     perform their intended tasks.
