--- a/applications/openshift/general/alert_receiver_configured/rule.yml
+++ b/applications/openshift/general/alert_receiver_configured/rule.yml
@@ -10,7 +10,7 @@ description: |-
   to send alert notifications to external systems so that designate personnel can be alerted 
   in real time.
 
-  OpenShift provides multiple alert recivers integrations to send realtime alerts to different
+  OpenShift provides multiple alert receivers integrations to send realtime alerts to different
   services such as email, slack, pagerduty, webhooks, etc. [1][2]
   
   [1]https://docs.openshift.com/container-platform/latest/post_installation_configuration/configuring-alert-notifications.html#configuring-alert-receivers_configuring-alert-notifications
