--- a/applications/openshift/general/oauth_provider_selection_set/policy/stig/shared.yml
+++ b/applications/openshift/general/oauth_provider_selection_set/policy/stig/shared.yml
@@ -20,7 +20,7 @@ fixtext: |-
 
   2. Edit the template to add the DOD notice and consent banner by adding
   the following lines at the end of the html body. In addition, any look
-  and feel custimizations should also be applied to the pages.
+  and feel customizations should also be applied to the pages.
 
       <script type="text/javascript">
         window.onload = function(){
