--- a/applications/openshift/group.yml
+++ b/applications/openshift/group.yml
@@ -13,7 +13,7 @@ description: |-
 
     Some of the settings in the hardening guide are in place by default. The
     audit information for these settings is provided in order to verify that
-    the cluster admininstrator has not made changes that would be less secure.
+    the cluster administrator has not made changes that would be less secure.
     A small number of items require configuration.
 
     Finally, there are some recommendations that require decisions by the
