--- a/applications/openshift/integrity/crypto/fips_mode_enabled_on_all_nodes/policy/stig/shared.yml
+++ b/applications/openshift/integrity/crypto/fips_mode_enabled_on_all_nodes/policy/stig/shared.yml
@@ -1,9 +1,9 @@
 checktext: |-
-  OpenShift must be configurated at the time of installation.  Because FIPS
+  OpenShift must be configured at the time of installation.  Because FIPS
   must be enabled before the operating system that your cluster uses boots
   for the first time, you cannot enable FIPS after you deploy a cluster. If
   a cluster is installed in FIPS mode, the nodes will indicate FIPS mode
-  and this will propogate into the platform.
+  and this will propagate into the platform.
 
   To validate that the OpenShift cluster is running with FIPS enabled on
   each node run the command:
