--- a/applications/openshift/integrity/crypto/storageclass_encryption_enabled/rule.yml
+++ b/applications/openshift/integrity/crypto/storageclass_encryption_enabled/rule.yml
@@ -11,7 +11,7 @@ description: |-
   encrypted using an AWS KMS key.
 
 rationale: |-
-  Enabling encryption on EBS storage used as PersitentVolumes help protect any card holder data that might be persisted
+  Enabling encryption on EBS storage used as PersistentVolumes help protect any card holder data that might be persisted
   on those EBS volumes. Only authorized AWS resources will be able, through IAM policies, to use the KMS key to eventually
   read or alter data on those volumes.
 
