--- a/applications/openshift/kubelet/kubelet_enable_streaming_connections_deprecated/rule.yml
+++ b/applications/openshift/kubelet/kubelet_enable_streaming_connections_deprecated/rule.yml
@@ -13,7 +13,7 @@ platform: {{{ product }}}-node
 title: 'kubelet - Do Not Disable Streaming Timeouts'
 
 description: |-
-    Timouts for streaming connections should not be disabled as they help to prevent
+    Timeouts for streaming connections should not be disabled as they help to prevent
     denial-of-service attacks.
     To configure streaming connection timeouts, edit the kubelet configuration
     file <tt>{{{ kubeletconf_path }}}</tt>
