--- a/applications/openshift/logging/audit_log_forwarding_uses_tls/policy/stig/shared.yml
+++ b/applications/openshift/logging/audit_log_forwarding_uses_tls/policy/stig/shared.yml
@@ -8,7 +8,7 @@ checktext: |-
   > oc describe clusterlogforwarder <name> -n openshift-logging
 
   Review the configuration and determine if the transport is secure, such
-  as tls:// or https://. If there are any tranports configured that are
+  as tls:// or https://. If there are any transports configured that are
   not secured by TLS, this is a finding.
 
 fixtext: |-
