--- a/applications/openshift/logging/cluster_logging_operator_exist/policy/stig/shared.yml
+++ b/applications/openshift/logging/cluster_logging_operator_exist/policy/stig/shared.yml
@@ -15,7 +15,7 @@ fixtext: |-
   be installed, then the Cluster Log Forwarder is configured to forward
   logs to a centralized log aggregation service.
 
-  In order to install the OpenShift Cluter Logging operator, Run the
+  In order to install the OpenShift Cluster Logging operator, Run the
   following command to apply the subscription manifests to your cluster:
 
   > oc apply -f - << 'EOF' --- 
