--- a/applications/openshift/master/file_permissions_kube_controller_manager/rule.yml
+++ b/applications/openshift/master/file_permissions_kube_controller_manager/rule.yml
@@ -2,7 +2,7 @@ documentation_complete: true
 
 prodtype: ocp4
 
-title: 'Verify Permissions on the Kubernetes Controller Manager Pod Specificiation File'
+title: 'Verify Permissions on the Kubernetes Controller Manager Pod Specification File'
 
 description: |-
     {{{ describe_file_permissions(file="/etc/kubernetes/static-pod-resources/kube-controller-manager-pod-*/kube-controller-manager-pod.yaml", perms="0644") }}}
