--- a/applications/openshift/master/file_permissions_var_lib_etcd/rule.yml
+++ b/applications/openshift/master/file_permissions_var_lib_etcd/rule.yml
@@ -8,7 +8,7 @@ description: |-
     {{{ describe_file_permissions(file="/var/lib/etcd", perms="0700") }}}
 
 rationale: |-
-    The <tt>/var/lib/etcd</tt> directory contains highly-avaliable distributed key/value data storage
+    The <tt>/var/lib/etcd</tt> directory contains highly-available distributed key/value data storage
     across an OpenShift cluster. Allowing access to users to this directory could compromise OpenShift
     data and the cluster.
 
