--- a/applications/openshift/networking/endpoint_configuration/rule.yml
+++ b/applications/openshift/networking/endpoint_configuration/rule.yml
@@ -17,7 +17,7 @@ rationale: |-
   network.
 
   Although Kubernetes API requires an authorized token to perform sensitive
-  actions, a vulnerability could potentially expose the Kubernetes publically
+  actions, a vulnerability could potentially expose the Kubernetes publicly
   with unrestricted access. Additionally, an attacker may be able to identify
   the current cluster and Kubernetes API version and determine whether it is
   vulnerable to an attack. Unless required, disabling public endpoint will help
@@ -32,7 +32,7 @@ identifiers:
 references:
   cis@eks: 5.4.2
 
-ocil_clause: 'private acces is enabled and public access is disabled'
+ocil_clause: 'private access is enabled and public access is disabled'
 
 ocil: |-
   Configure the EKS cluster endpoint to be private. See Modifying Cluster
