--- a/applications/openshift/networking/project_config_and_template_network_policy/rule.yml
+++ b/applications/openshift/networking/project_config_and_template_network_policy/rule.yml
@@ -35,7 +35,7 @@ rationale: |-
 
     Ensuring that the project configuration references
     a project template that sets up the required objects for new projects ensures
-    that all new projects will be set in accordance with centralized setttings.
+    that all new projects will be set in accordance with centralized settings.
 
 severity: medium
 
