--- a/applications/openshift/rbac/group.yml
+++ b/applications/openshift/rbac/group.yml
@@ -2,7 +2,7 @@ documentation_complete: true
 
 prodtype: ocp4
 
-title: 'Role-based Acess Control'
+title: 'Role-based Access Control'
 
 description: |-
     Role-based access control (RBAC) objects determine
