--- a/applications/openshift/registry/ocp_allowed_registries_for_import/rule.yml
+++ b/applications/openshift/registry/ocp_allowed_registries_for_import/rule.yml
@@ -6,7 +6,7 @@ description: |-
     The configuration <tt>allowedRegistriesForImport</tt> limits the container
     image registries from which normal users may import images. This is important
     to control, as a user who can stand up a malicious registry can then import
-    content which claims to include the SHAs of legimitate content layers.
+    content which claims to include the SHAs of legitimate content layers.
     You can set the allowed repositories for import by applying the following
     manifest using <pre>oc patch</pre>, e.g. if you save the following snippet to
     <pre>/tmp/allowed-import-registries-patch.yaml</pre>
