--- a/applications/openshift/scc/scc_drop_container_capabilities/rule.yml
+++ b/applications/openshift/scc/scc_drop_container_capabilities/rule.yml
@@ -5,7 +5,7 @@ prodtype: ocp4
 title: 'Drop Container Capabilities'
 
 description: |-
-    Containers should not enable more capabilites than needed as this
+    Containers should not enable more capabilities than needed as this
     opens the door for malicious use. To disable the
     capabilities, the appropriate Security Context Constraints (SCCs)
     should set all capabilities as <tt>*</tt> or a list of capabilities in
