--- a/applications/openshift/scc/scc_limit_host_dir_volume_plugin/rule.yml
+++ b/applications/openshift/scc/scc_limit_host_dir_volume_plugin/rule.yml
@@ -6,7 +6,7 @@ title: 'Limit Containers Ability to use the HostDir volume plugin'
 
 description: |-
     Containers should be allowed to use the <tt>hostPath</tt> volume type unless
-    necessarry. To prevent containers from using the host filesystem
+    necessary. To prevent containers from using the host filesystem
     the appropriate Security Context Constraints (SCCs) should set
     <tt>allowHostDirVolumePlugin</tt> to <tt>false</tt>.
 
