--- a/applications/openshift/general/openshift_motd_exists/rule.yml
+++ b/applications/openshift/general/openshift_motd_exists/rule.yml
@@ -46,7 +46,7 @@ description: |-
   <br /><br />
   OR:
   <br /><br />
-  <tt>I've read &amp; consent to terms in IS user agreem't.</tt>
+  <tt>I've read &amp; consent to terms in IS user agreement.</tt>
 
 rationale: |-
   Display of a standardized and approved use notification before granting
