--- a/applications/openshift/general/project_config_and_template_resource_quota/rule.yml
+++ b/applications/openshift/general/project_config_and_template_resource_quota/rule.yml
@@ -45,7 +45,7 @@ rationale: |-
     <p>
     Ensuring that the project configuration references
     a project template that sets up the required objects for new projects ensures
-    that all new projects will be set in accordance with centralized setttings.
+    that all new projects will be set in accordance with centralized settings.
     </p>
 
 severity: medium
