--- a/applications/openshift/general/project_template_resource_quota/rule.yml
+++ b/applications/openshift/general/project_template_resource_quota/rule.yml
@@ -24,7 +24,7 @@ rationale: |-
 
     Ensuring that the project configuration references
     a project template that sets up the required objects for new projects ensures
-    that all new projects will be set in accordance with centralized setttings.
+    that all new projects will be set in accordance with centralized settings.
 
 severity: medium
 
