--- a/applications/openshift/general/resource_requests_limits_in_deployment/rule.yml
+++ b/applications/openshift/general/resource_requests_limits_in_deployment/rule.yml
@@ -6,7 +6,7 @@ description: |-
   When deploying an application, it is important to tune based on memory and CPU consumption,
   allocating enough resources for the application to function properly. Images provided by
   OpenShift Dedicated behave properly within the confines of the memory they are allocated.
-  However, any applicaiton images must pay attention to the specific resources required to
+  However, any application images must pay attention to the specific resources required to
   ensure they are available.
 
   If the node where a Pod is running has enough of a resource available, it's possible (and allowed)
