--- a/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_kernel_keys_root_maxbytes/rule.yml
+++ b/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_kernel_keys_root_maxbytes/rule.yml
@@ -24,7 +24,7 @@ description: |-
   <p>
   Before enabling kernel parameter overwritten protection default, 
   it's important to check if these values are already set to the required values.
-  If not, it is neccessary to first create a <tt>MachineConfig</tt>
+  If not, it is necessary to first create a <tt>MachineConfig</tt>
   object that persist the required sysctl's. The required sysctl's are the following:
   </p>
 
