--- a/applications/openshift/kubelet/kubelet_enable_streaming_connections_worker/rule.yml
+++ b/applications/openshift/kubelet/kubelet_enable_streaming_connections_worker/rule.yml
@@ -7,7 +7,7 @@ platform: {{{ product }}}
 title: 'kubelet - Do Not Disable Streaming Timeouts'
 
 description: |-
-    Timouts for streaming connections should not be disabled as they help to prevent
+    Timeouts for streaming connections should not be disabled as they help to prevent
     denial-of-service attacks.
     To configure streaming connection timeouts
     To set the <tt>streamingConnectionIdleTimeout</tt> option for the kubelet,
