--- a/applications/openshift/master/file_owner_scheduler_kubeconfig/rule.yml
+++ b/applications/openshift/master/file_owner_scheduler_kubeconfig/rule.yml
@@ -8,7 +8,7 @@ description: |-
   {{{ describe_file_owner(file="/etc/kubernetes/static-pod-resources/kube-scheduler-pod-*/configmaps/scheduler-kubeconfig/kubeconfig", owner="root") }}}
 
 rationale: |-
-  The kubeconfig for the Scheduler contains paramters for the scheduler
+  The kubeconfig for the Scheduler contains parameters for the scheduler
   to access the Kube API.
   You should set its file ownership to maintain the integrity of the file.
 
