--- a/applications/openshift/registry/ocp_allowed_registries_for_import/policy/stig/shared.yml
+++ b/applications/openshift/registry/ocp_allowed_registries_for_import/policy/stig/shared.yml
@@ -4,9 +4,9 @@ srg_requirement: |-
     authorized by IAVM, CTOs, DTMs, and STIGs.
 
 vuldiscussion: |-
-    It is critical to the security ond stabilty of the container platform and the software services running on the plaftorm to ensure that images are deployed through a trusted software supply chain. Some key elements to having a trusted supply chain include ensuring that images deployed to the container platform come from known, trusted sources.  Additionally, it is also important to check for and apply security relevent updates in a timely manner.
+    It is critical to the security ond stability of the container platform and the software services running on the platform to ensure that images are deployed through a trusted software supply chain. Some key elements to having a trusted supply chain include ensuring that images deployed to the container platform come from known, trusted sources.  Additionally, it is also important to check for and apply security relevant updates in a timely manner.
 
-    In order to help users manage images, OpenShift uses image streams to provide a level of obstraction for the users. In this way the users can trigger automatic redeployments as images are updated. It is also possible to configure the image stream to periodically check the image source repository for any updates and automatically pull in the latest updates.
+    In order to help users manage images, OpenShift uses image streams to provide a level of abstraction for the users. In this way the users can trigger automatic redeployments as images are updated. It is also possible to configure the image stream to periodically check the image source repository for any updates and automatically pull in the latest updates.
 
     The OpenShift platform can be configured to limit and control which image source repositories may be used by the platform and the users of the platform. By configuring this to only allow users to deploy images from trusted sources, lowers the risk for a user to deploy unsafe, or untested images that would be detrimental to the security and stability of the platform.
 
