--- a/applications/openshift/scc/scc_limit_ipc_namespace/rule.yml
+++ b/applications/openshift/scc/scc_limit_ipc_namespace/rule.yml
@@ -5,7 +5,7 @@ prodtype: ocp4
 title: 'Limit Access to the Host IPC Namespace'
 
 description: |-
-    Containers should not be allowed access to the host's Interprocess Commication (IPC)
+    Containers should not be allowed access to the host's Interprocess Communication (IPC)
     namespace. To prevent containers from getting access to a host's
     IPC namespace, the appropriate Security Context Constraints (SCCs)
     should set <tt>allowHostIPC</tt> to <tt>false</tt>.
