fix: fixed typos in label status_justfication

--- a/controls/srg_ctr/SRG-APP-000148-CTR-000340.yml
+++ b/controls/srg_ctr/SRG-APP-000148-CTR-000340.yml
@@ -9,7 +9,7 @@ controls:
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
   status: inherently met
-  status_justfication: |-
+  status_justification: |-
     Users of the OpenShift Platform must be uniquely identified and
     authenticated in order to access the platform's console. Anonymous
     users are prohibited, and authorization is enforced by the platform's
