--- a/controls/srg_ctr/SRG-APP-000153-CTR-000375.yml
+++ b/controls/srg_ctr/SRG-APP-000153-CTR-000375.yml
@@ -9,7 +9,7 @@ controls:
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
   status: inherently met
-  status_justfication: |-
+  status_justification: |-
     RBAC policies support individual user accounts to be assigned to
     groups/roles, and therefore shared accounts are not used.
     Review the RBAC policy documentation at
