fix: typos in srg_ctr

--- a/controls/srg_ctr/SRG-APP-000109-CTR-000215.yml
+++ b/controls/srg_ctr/SRG-APP-000109-CTR-000215.yml
@@ -20,6 +20,6 @@ controls:
     The OpenShift Platform will generate an alert upon failure of the
     audit logging service. The responses to those alerts may be defined
     by the organizations administrative group, and may even be automated
-    reponses.  If there is a failure to forward logs to the organization's
+    responses.  If there is a failure to forward logs to the organization's
     log collection service, OpenShift will retain about 10 logs up to
     100MB each, more than that, the logs will then rotate.
