--- a/controls/srg_ctr/SRG-APP-000133-CTR-000310.yml
+++ b/controls/srg_ctr/SRG-APP-000133-CTR-000310.yml
@@ -13,4 +13,4 @@ controls:
   status_justification: |-
     The OpenShift Container Platform provides RBAC policies and enforcement of those policies out of the box.  Verification of SRG-APP-000340-CTR-000770 will ensure that binding of user and groups to roles provides proper restriction of access to resources. For more information on how RBAC policies work in OpenShift.
 
-    Only users with cluster-admin priviliges are permitted to create, modify, or view platform identity providers stored within the Oauth custom resource defining identity provider configuration(s).
+    Only users with cluster-admin privileges are permitted to create, modify, or view platform identity providers stored within the Oauth custom resource defining identity provider configuration(s).
