--- a/controls/srg_ctr/SRG-APP-000185-CTR-000490.yml
+++ b/controls/srg_ctr/SRG-APP-000185-CTR-000490.yml
@@ -10,7 +10,7 @@ controls:
   - kubeadmin_removed
   status: inherently met
   status_justification: |-
-    Typically maintenence of the OpenShift Platform is performed remotely
+    Typically maintenance of the OpenShift Platform is performed remotely
     using the API server by means of the web console or cli tools. Access
     to host nodes is done either through SSH using SSH keys provided during
     install, or through the OpenShift CLI (oc) tool. Note, that applying
