--- a/controls/srg_ctr/SRG-APP-000290-CTR-000670.yml
+++ b/controls/srg_ctr/SRG-APP-000290-CTR-000670.yml
@@ -8,7 +8,7 @@ controls:
   - audit_log_forwarding_uses_tls
   status: inherently met
   status_justification: |-
-    The audit tools used with OpenShift Container Platform are all delivered as container images referenced by menifest checksum. Installation sources for OpenShift are also delivered as container images, referenced by manifest checksum. See, for example, https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable-4.8/release.txt
+    The audit tools used with OpenShift Container Platform are all delivered as container images referenced by manifest checksum. Installation sources for OpenShift are also delivered as container images, referenced by manifest checksum. See, for example, https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable-4.8/release.txt
 
     The listing of platform components by their manifest checksums, as well as the installer and command line tooling, are additionally checksummed. See, for example, https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable-4.8/sha256sum.txt
 
