--- a/controls/srg_ctr/SRG-APP-000378-CTR-000890.yml
+++ b/controls/srg_ctr/SRG-APP-000378-CTR-000890.yml
@@ -13,7 +13,7 @@ controls:
   status_justification: |-
     User's of the OpenShift platform allows users with the appropriate
     roles and permissions to create images, or request existing images. OpenShift
-    maintains and internal registry that is stricted from general users through RBAC
+    maintains and internal registry that is restricted from general users through RBAC
     policy.  Instead, user's with the appropriate permissions will manage images through
     the API. Most often this is done indirectly through image streams.  Refer to the
     following documentation for more details:
