--- a/controls/srg_ctr/SRG-APP-000431-CTR-001065.yml
+++ b/controls/srg_ctr/SRG-APP-000431-CTR-001065.yml
@@ -6,7 +6,7 @@ controls:
     each container by assigning each container a separate address space.
   status: inherently met
   artifact_description: |-
-    Supporting evidence is in the follwing documenation
+    Supporting evidence is in the following documentation
 
     https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html#rbac-default-projects_using-rbac
     https://docs.openshift.com/container-platform/latest/authentication/managing-security-context-constraints.html
