--- a/controls/srg_ctr/SRG-APP-000447-CTR-001100.yml
+++ b/controls/srg_ctr/SRG-APP-000447-CTR-001100.yml
@@ -12,6 +12,6 @@ controls:
     through transport security (TLS), as well as authentication, authorization, and additional
     admission controllers. These security mechanisms are configured out of the box with
     strong security controls but can be even further limited to enforce least privilege.
-    Additionally, the API Server safeguarads against unintended consequences by rejecting
+    Additionally, the API Server safeguards against unintended consequences by rejecting
     invalid inputs and creating audit records of API events. Alerts and logs and also
     be setup to display changes of API events.
