--- a/controls/srg_ctr/SRG-APP-000605-CTR-001380.yml
+++ b/controls/srg_ctr/SRG-APP-000605-CTR-001380.yml
@@ -11,7 +11,7 @@ controls:
 
     https://docs.openshift.com/container-platform/latest/security/certificate_types_descriptions/node-certificates.html
   status_justification: |+
-    Internal components are secured with two-way TLS. Certificate revokaction lists (CRLs) are not currently supported by Kubernetes upstream - https://github.com/kubernetes/kubernetes/issues/18982. Application components can be fully compliant by adding the checks inside container images.
+    Internal components are secured with two-way TLS. Certificate revocation lists (CRLs) are not currently supported by Kubernetes upstream - https://github.com/kubernetes/kubernetes/issues/18982. Application components can be fully compliant by adding the checks inside container images.
 
     https://docs.openshift.com/container-platform/latest/security/certificate_types_descriptions/node-certificates.html
 
