--- a/controls/srg_ctr/SRG-APP-000380-CTR-000900.yml
+++ b/controls/srg_ctr/SRG-APP-000380-CTR-000900.yml
@@ -13,7 +13,7 @@ controls:
     https://docs.openshift.com/container-platform/latest/updating/updating-cluster.html#prerequisites
     https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html
   status_justification: |
-    Administrators must have access to the cluster as a user with cluster-admin privileges in order to apply configuration chages to the cluster. See RBAC link for how to define and apply permissions.
+    Administrators must have access to the cluster as a user with cluster-admin privileges in order to apply configuration changes to the cluster. See RBAC link for how to define and apply permissions.
 
     https://docs.openshift.com/container-platform/latest/updating/updating-cluster.html#prerequisites
     https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html
