fix: more status_justification misspellings

--- a/controls/srg_gpos/SRG-OS-000362-GPOS-00149.yml
+++ b/controls/srg_gpos/SRG-OS-000362-GPOS-00149.yml
@@ -21,5 +21,5 @@ controls:
         artifact_description:
           {{{ full_name }}} uses DNF or Dandified YUM, the next generation version of the Yellowdog Updater, Modified and RPM (Red Hat Package Manager) to install system software. 
           Both of these utilities and the archive repositories are installed with root privileges and they require root privileges to execute.
-        status_justificaton:
+        status_justification:
             The UNIX permissions construct separates user and privileged user (the operating system accounts) access.
