--- a/controls/srg_gpos/SRG-OS-000276-GPOS-00106.yml
+++ b/controls/srg_gpos/SRG-OS-000276-GPOS-00106.yml
@@ -11,5 +11,5 @@ controls:
             Mitigate with third-party software.
             
             Although the listed mitigation is supporting the security function, it is not sufficient to reduce the residual risk of this requirement.
-        status_justfifcation:
+        status_justification:
             Notification when accounts are created/modified/deleted must be provided by a third-party application that will communicate that an audit record of these actions has been created.
