fix: typos in controls/srg_gpos

--- a/controls/srg_gpos/SRG-OS-000191-GPOS-00080.yml
+++ b/controls/srg_gpos/SRG-OS-000191-GPOS-00080.yml
@@ -10,7 +10,7 @@ controls:
         rationale: |-
             Without the use of automated mechanisms to scan for security flaws on a continuous and/or periodic basis, the operating system or other system components may remain vulnerable to the exploits presented by undetected software flaws.
         
-            To support this requirement, the operating system may gihave an integrated solution incorporating continuous scanning using ESS and periodic scanning using other tools, as specified in the requirement.
+            To support this requirement, the operating system may have an integrated solution incorporating continuous scanning using ESS and periodic scanning using other tools, as specified in the requirement.
         status_justification:
             {{{ full_name }}} does not have configuration options to meet this requirement.
         check: |-
