--- a/controls/srg_gpos/SRG-OS-000228-GPOS-00088.yml
+++ b/controls/srg_gpos/SRG-OS-000228-GPOS-00088.yml
@@ -2,7 +2,7 @@ controls:
     -   id: SRG-OS-000228-GPOS-00088
         levels:
             - medium
-        title: Any publically accessible connection to {{{ full_name }}} must display
+        title: Any publicly accessible connection to {{{ full_name }}} must display
             the Standard Mandatory DoD Notice and Consent Banner before granting access to
             the system.
         rules:
