--- a/controls/srg_gpos/SRG-OS-000312-GPOS-00124.yml
+++ b/controls/srg_gpos/SRG-OS-000312-GPOS-00124.yml
@@ -17,7 +17,7 @@ controls:
             No fix is required.
         artifact_description:
             UID 0 is the root account as defined by POSIX standard.
-            The root user has the abiliy to full administrator {{{ full_name }}}.
+            The root user has the ability to full administrator {{{ full_name }}}.
         status_justification:
           {{{ full_name }}} meets this requirement and it is not configurable.
 
